# ops

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  pages.yml  release.yml
Assets.xcassets/BrandLogo.imageset/: Contents.json
LocalPackages/SwiftTerm/: Package.swift
ParevoOps.xcodeproj/: project.pbxproj
ParevoOps.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ParevoOps.xcodeproj/project.xcworkspace/xcuserdata/ahmetcanbilgay.xcuserdatad/: UserInterfaceState.xcuserstate
ParevoOps.xcodeproj/xcshareddata/xcschemes/: ParevoOps.xcscheme
ParevoOps.xcodeproj/xcuserdata/ahmetcanbilgay.xcuserdatad/xcschemes/: xcschememanagement.plist
Sources/App/: AppSession.swift  AppUpdater.swift  Info.plist  ParevoOpsApp.swift
Sources/Core/DI/: DependencyContainer+Register.swift  DependencyContainer.swift
Sources/Core/DesignSystem/: BrandColor.swift  BrandSpacing.swift  Theme.swift
Sources/Core/DesignSystem/Components/: GlassCard.swift
Sources/Core/Errors/: OpsError.swift
Sources/Core/Security/: KeychainService.swift
Sources/Models/: CronModels.swift  DockerModels.swift  FileModels.swift  OpsModels.swift  Project.swift  Server.swift  ServerExport.swift  ServerProvider.swift  SystemMetrics.swift
Sources/Services/Alerts/: AlertMonitor.swift
Sources/Services/Cron/: CronService.swift
Sources/Services/Deploy/: DeployService.swift
Sources/Services/Docker/: DockerService.swift
Sources/Services/File/: FileService.swift
Sources/Services/Log/: LogService.swift
Sources/Services/Memory/: MemoryEngine.swift
Sources/Services/Metrics/: MetricsService.swift
Sources/Services/Protocols/: ServiceProtocols.swift
Sources/Services/SSH/: PortForwardService.swift  SSHAskPass.swift  SSHService.swift
Sources/Services/Systemd/: SystemdService.swift
Sources/Views/: ContentView.swift
Sources/Views/Alerts/: AlertsView.swift
Sources/Views/CommandPalette/: CommandPaletteView.swift
Sources/Views/Dashboard/: DashboardView.swift
Sources/Views/Docker/: ContainerQuickActions.swift
Sources/Views/Metrics/: MetricsView.swift
Sources/Views/Modules/: ModuleViews.swift
Sources/Views/Projects/: ProjectDetailView.swift  ProjectsView.swift
Sources/Views/Servers/: ServersView.swift
Sources/Views/Shared/: ServerScopeBanner.swift  SidebarItem.swift
Sources/Views/Terminal/: InteractiveSSHTerminalView.swift  TerminalConsoleView.swift  TerminalHostRegistry.swift  TerminalPanel.swift  TerminalSession.swift
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/docker/: Cargo.toml
crates/docker/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/files/: Cargo.toml
crates/files/src/: lib.rs
crates/logs/: Cargo.toml
crates/logs/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: lib.rs
crates/system/: Cargo.toml
crates/system/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs
docs/: appcast.xml  index.html
ios/ParevoOps/: ParevoOpsApp.swift
ios/ParevoOps/Services/: SSHService.swift
ios/ParevoOps/Views/: AiAssistantView.swift  ContainersView.swift  ContentView.swift  DashboardView.swift  FilesView.swift  LogsView.swift  ServersView.swift  ServicesView.swift
macos/ParevoOps/: ParevoOpsApp.swift
macos/ParevoOps/Models/: Models.swift
macos/ParevoOps/Services/: AIService.swift  SSHService.swift
macos/ParevoOps/Views/: AiAssistantView.swift  ContainersView.swift  ContentView.swift  DashboardView.swift  FilesView.swift  LogsView.swift  ServersView.swift  ServicesView.swift
scripts/: generate-appcast.sh  generate-sparkle-keys.sh  package-release.sh
signing/: Ops-adhoc.entitlements  README.md  sparkle_public_ed_key.txt
