[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/core",
    "crates/ssh",
    "crates/docker",
    "crates/system",
    "crates/files",
    "crates/logs",
    "crates/terminal",
    "crates/metrics",
    "crates/events",
    "crates/ai",
    "crates/plugins",
    "crates/config",
    "crates/common",
    "crates/database",
]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# SSH Remote
openssh = "0.10"

# Docker Engine
bollard = "0.17"

# Telemetry
sysinfo = "0.31"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# PTY terminal
portable-pty = "0.8"

# Window Effects
window-vibrancy = "0.6"

# Native File Dialog
rfd = "0.15"

# Error Handling
thiserror = "2.0"

# Utils
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Workspace Crates (relative paths)
parevo-common = { path = "crates/common" }
parevo-events = { path = "crates/events" }
parevo-config = { path = "crates/config" }
parevo-database = { path = "crates/database" }
parevo-ssh = { path = "crates/ssh" }
parevo-docker = { path = "crates/docker" }
parevo-system = { path = "crates/system" }
parevo-files = { path = "crates/files" }
parevo-logs = { path = "crates/logs" }
parevo-terminal = { path = "crates/terminal" }
parevo-metrics = { path = "crates/metrics" }
parevo-ai = { path = "crates/ai" }
parevo-plugins = { path = "crates/plugins" }
parevo-core = { path = "crates/core" }
