[package]
name = "parevo-ai"
version = "0.1.0"
edition = "2021"
description = "Context aggregation and OpenAI-compatible client API for Parevo Ops"

[dependencies]
parevo-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
