[package]
name = "parevo-common"
version = "0.1.0"
edition = "2021"
description = "Common structures, error handling, and utilities for Parevo Ops"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
