[package]
name = "parevo-database"
version = "0.1.0"
edition = "2021"
description = "SQLite database storage and migration utility for Parevo Ops"

[dependencies]
parevo-common = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
