[package]
name = "parevo-files"
version = "0.1.0"
edition = "2021"
description = "File explorer backend for local and remote systems in Parevo Ops"

[dependencies]
parevo-common = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing = { workspace = true }
serde = { workspace = true }
