[package]
name = "parevo-ssh"
version = "0.1.0"
edition = "2021"
description = "SSH connection pool and command executor for Parevo Ops"

[dependencies]
parevo-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
openssh = { workspace = true }
