[package]
name = "parevo-desktop"
version = "0.1.0"
description = "Parevo Ops Desktop App"
authors = ["Parevo Core Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "parevo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Workspace Crates
parevo-common = { workspace = true }
parevo-core = { workspace = true }
parevo-ssh = { workspace = true }

# Shared dependencies
rfd = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
window-vibrancy = { workspace = true }


